# Learning

./: .gitignore  LifeCycleLogger.h  README.md  Vector.h  _questions  a.out  arrowOperator.cpp  binaryTrees  binaryTrees.cpp  cast.cpp  compiler.h  compiler1.cpp  compiler1.h  graph.cpp  increment.cpp  lambda.cpp  lifeCycle  lifeCycle.cpp  move.cpp  move2.cpp  move3.cpp  optionals.cpp  parenthesis  parenthesis.cpp  pch.h  singleton.cpp  sort2.cpp  structuredBindings.cpp  test.js  test.json  timer.h  tree.cpp  vector2  vector2.cpp
ai/gpt/: bigram.py  data.py  models.py  sandbox.ipynb  transformer.py  util.py
ai/makemore/: bigram.ipynb  mlp.ipynb  notes.md  util.py
binaryTrees.dSYM/Contents/: Info.plist
cpp/: AppVersion.cpp  Vector.h  assembly.cpp  binaryTrees.cpp  compiler.cpp  compiler2.cpp  compiler2.h  correctByConstruction.cpp  declarations.cpp  iterators.cpp  linked.cpp  map.cpp  map2.cpp  operatorOverload.cpp  pch.h  pre-compiled-headers.cpp  smartPointers.cpp  sort.cpp  sort2.cpp  static.cpp  struct.cpp  test.cpp  timer.cpp  type-punning.cpp  unions.cpp  vector.cpp  vtables.cpp
cpp/ray-tracing/: camera.h  color.h  hittable.h  image.h  image.ppm  image600.ppm  main.cpp  material.h  ray.h  (+4 more)
haskell/Homework 2.hsproj/Homework 2/: Homework2.cabal  LogAnalysis.hs  _LogAnalysis.hsplay
haskell/Homework 3.hsproj/Homework 3/: Homework3.cabal  Main.hs  NewModule.hs  NewModule2.hs  _Main.hsplay  _NewModule.hsplay  _NewModule2.hsplay
haskell/Homework 5.hsproj/Homework 5/: Homework5.cabal  Main.hs  _Main.hsplay
python/: perfect-words.py  perfect-words.txt  sort.py
(+33 files in other folders)
