cabal-version: 2.4
name: Homework2
version: 1.0
stability: experimental
x-ghc-framework-version: 8.6.4-13.14-2
x-last-ide-version: HfM1.7.0
data-files:
    error.log
    sample.log

executable Homework2
    main-is: LogAnalysis.hs
    other-modules:
        Log
    default-language: Haskell2010
    build-depends:
        base -any
